----
v3.0
----

[mjr] Datatree share to SQL upgrade script refactored for Horde 4.
[jan] Fix creating new tasks through WebDAV (Bug #9675).
[jan] Move all executable scripts to bin/ and prefix with nag-.


--------
v3.0-RC1
--------

[jan] Update installation and upgrade instructions.
[gwr] Adapted the Kolab driver to Horde 4.


----------
v3.0-BETA1
----------

[mjr] Fix saving tasks via PUT method.
[mjr] Fix deleting task lists.
[mjr] Fix hiding the External prefs group (Bug #9643).


-----------
v3.0-ALPHA1
-----------

[jan] Provide default configuration files instead of .dist versions.
[jan] Send alarm notifications with HTML part and convert to Horde_View.
[jan] Default task lists no longer have the user name as the ID.
[jan] Create a default task list if the user doesn't own any yet.
[jan] Add start date to possible colums in task list (Joel Smith
      <js-horde@jk1.net>, Request #9083).
[jan] Add system task lists (Request #2059).
[jan] Set colors per task list (Request #7480).
[cjh] Quick Add support: there is a javascript UI element for quickly adding
      tasks, and an API method (tasks/quickAdd) that provides the same
      functionality.
[jan] Add individual notification methods for single tasks (Alfonso Marín
      Marín <almarin@um.es>).


------
v2.3.6
------

[jan] Remove stray closing tag when displaying the date of completion.
[mjr] Do not remove history entries when removing user data (Bug #8755).


------
v2.3.5
------

[jan] Set an alarm to one minute, if users try to set an alarm without time.
[jan] Add missing preference for not sending update notifications to yourself
      (Joel Smith <js-horde@jk1.net>, Request #8978).
[gwr] Fix organizer field not saved in tasks (kolab/issue3888).


------
v2.3.4
------

[jan] Add and fix Oracle-specific SQL scripts.
[jan] Fix importing due date attribute from iCalendar (Bug #8644).
[jan] Fix charset when exporting tasks to iCalendar 2.0 (Bug #8637).