@@ -2,6 +2,7 @@
 v3.0
 ----
 
+[jan] Fix application-specific permission checks (Bug #9786).
 [mjr] Datatree share to SQL upgrade script refactored for Horde 4.
 [jan] Fix creating new tasks through WebDAV (Bug #9675).
 [jan] Move all executable scripts to bin/ and prefix with nag-.
